--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 /bin
 /research
 .env
+config.toml
+config.json
+config.yaml
+config.yml
 
 # ====> Go
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
