--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ config.toml
 config.json
 config.yaml
 config.yml
+settings.toml
+settings.json
+settings.yaml
+settings.yml
 
 # ====> Go
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
